[package]
name = "invoker"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
cstr = "0.2.10"
clap = { version = "3.1.6", features = ["derive"] }
rustyline = "9.1.2"
trans = {path = "./trans"}
libffi = "3.0.0"

[build-dependencies]
cmake = "0.1.48"